--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
 					<p>
                         Our team scouts the internet for the best designs, illustrations
                          and art and delivers a truly inspiring one every day to your inbox
-					</p>
-					<h3>Show me how it works</h3>
+					</p><br>
+					<h3>Show me how it works</h3> <br>
 					<div class="registerContainer">
 						<input type="text" placeholder="Your e-mail address" />
 						<button>Register Now</button>
-					</div>
+					</div> <br>
 					<span class="freenodata"> Free - No Spam - No Data Sharing</span>
 				</div>
 				<div class="headerRight">
 					<div class="imageContainer">
-						<img src="" alt="image here" />
+						<img src="./image/Vector.png" alt="image here" width="40" height="350"/>
 					</div>
 				</div>
 			</div>
@@ -43,7 +43,8 @@
 					<span>dweep.io</span>
 					<span>Made with love in India</span>
                     <div class="logoContainer">
-                        <img src="./image/clubhub.png" alt="logo here" />
+                        <img src="./image/linkedlin_logo.png" alt="linkedin logo here" width="15" height="15"/>
+						<img src="./image/Instagram_logo.png" alt="instagram logo here" width="15" height="15" />
                     </div>
                     <br>
                     <span>hello@dweep.io</span>
